fixed spacing for feature

--- a/styles.css
+++ b/styles.css
@@ -1050,6 +1050,7 @@ footer ul a {
     width: 400px;
     height: 120px;
     display: block;
+    margin-top: 30px;
     flex-direction: column;
     align-items: left;
     justify-content: center;
@@ -1552,6 +1553,7 @@ footer ul a {
     width: 350px;
     height: 150px;
     display: block;
+    margin-top: 30px;
     flex-direction: column;
     align-items: left;
     justify-content: center;
@@ -1934,6 +1936,7 @@ footer ul a {
     width: 320px;
     height: 150px;
     display: block;
+    margin-top: 30px;
     flex-direction: column;
     align-items: left;
     justify-content: center;
